--- a/app/scss/_articles.scss
+++ b/app/scss/_articles.scss
@@ -65,6 +65,10 @@
                 margin-bottom: 0.625rem;
                 transition: color 250ms ease-in-out;
 
+                &:visited{
+                    color: $darkBlue;
+                }
+
                 &:hover{
                     color: $limeGreen;
                 }
