--- a/app/scss/_articles.scss
+++ b/app/scss/_articles.scss
@@ -64,6 +64,7 @@
                 font-size: 0.96875rem; //15.5px
                 margin-bottom: 0.625rem;
                 transition: color 250ms ease-in-out;
+                color: $darkBlue;
 
                 &:visited{
                     color: $darkBlue;
